fixed alignment of header dashboard when logged in to admindashboard

--- a/frontend/src/components/css/Header.css
+++ b/frontend/src/components/css/Header.css
@@ -97,10 +97,15 @@ header {
     text-decoration: none;
     font-size: 1.2rem;
     height: 3rem;
+    width: 85%;
     border: none;
     background: none;
     line-height: 2.4;
     border: 1px solid gray;
+  }
+
+  nav a {
+    width: 100%;
   }
   
   nav a:hover,
@@ -120,38 +125,50 @@ header {
   .logout-button {
     cursor: pointer;
     /* margin: 5px auto; */
-    width: 100vw;
+    /* width: 100vw; */
+    width: 100%;
     line-height: 1;
     /* border-radius: 5px; */  }
 
   @media (min-width: 600px) and (max-width: 1024px) {
-  nav.nav {
-    position: fixed;
-    top: 90px;
-    left: -250px; /* hide it off screen */
-    width: 125px;
-    height: 100%;
-    background-color: #222;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
-    padding: 0 10px; /* room for links */
-    transition: left 0.3s ease;
-    z-index: 998;
-  }
+    nav.nav {
+      position: fixed;
+      top: 90px;
+      left: -250px; /* hide it off screen */
+      width: 125px;
+      height: 100%;
+      background-color: #222;
+      flex-direction: column;
+      justify-content: flex-start;
+      align-items: flex-start;
+      
+      transition: left 0.3s ease;
+      z-index: 998;
+    }
 
-  nav.nav.open {
-    left: 0; /* slide in */
-    padding-top: .625rem;;
-  }
+    nav.nav.open {
+      left: 0; /* slide in */
+      /* padding-top: .625rem; */
+    }
 
-  nav a, .admin-button, .logout-button {
-    /* width: 100%; */
-    text-align: left;
-    font-size: 1.1rem;
-    padding-left: 15px;
-  }
+    nav a, .admin-button, .logout-button {
+      /* width: 86%; */
+      text-align: center;
+      font-size: 1.1rem;
+      /* padding-left: 15px; */
+      padding: .5rem;
+      border-radius: 0%;
+    }
+    nav a {
+    width: 86%;
+    padding: 0;
+    padding-right: 1rem;
+   }
+   .admin-button, .logout-button {
+      width: 100%;
+   }
 }
+
 
 /* Larger screen styles */
 @media (min-width: 1025px) {
