--- a/frontend/src/pages/adminDashboard/css/AdminDashboard.css
+++ b/frontend/src/pages/adminDashboard/css/AdminDashboard.css
@@ -63,3 +63,19 @@
     font-weight: 600;
   }
   
+ @media(min-width: 480px){
+     #greeting {
+        font-size: 1.35rem; /* Adjust font size for larger screens */
+        padding: 0 1.25rem; /* Adjust padding for larger screens */
+        padding-top: 3rem;
+    }
+} 
+
+ /* >= Tablets (portrait) */
+  @media (min-width: 600px) {
+    /* Wider buttons, larger grids */
+    #greeting {
+        font-size: 1.4rem; /* Adjust font size for larger screens */
+        padding-top: 3.5rem;;
+    }
+  }
